--- a/.gitignore
+++ b/.gitignore
@@ -40,11 +40,11 @@ gtags.files
 !/textures/base/
 /screenshots
 /sounds
-/mods/*
-!/mods/minetest/
-/mods/minetest/*
-!/mods/minetest/mods_here.txt
-/worlds
+#/mods/*
+#!/mods/minetest/
+#/mods/minetest/*
+#!/mods/minetest/mods_here.txt
+#/worlds
 /world/
 /clientmods/*
 !/clientmods/preview/
